Fix last two items not aligned to the end of navbar

--- a/frontend/src/app/components/Navbar/Navbar.module.css
+++ b/frontend/src/app/components/Navbar/Navbar.module.css
@@ -23,14 +23,8 @@
     z-index: 999;
 }
 
-.navItems {
-    display: flex;
-    align-items: center;
-
-    position: relative;
-}
-
 .navGroup {
+    justify-self: end;
     display: flex;
     align-items: center;
     gap: 18px;
